--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "maxwp/ClassLoader",
+    "name": "maxwp/classloader",
     "description": "Class auto loader",
     "license": "LGPL",
     "authors": [
