--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "maxwp/classloader",
     "description": "Class auto loader",
-    "license": "LGPL",
+    "license": "LGPL-3.0-or-later",
     "authors": [
         {
             "name": "Maxim Miroshnichenko",
